--- a/package.json
+++ b/package.json
@@ -14,7 +14,12 @@
     "@react-navigation/bottom-tabs": "^5.2.8",
     "@react-navigation/native": "^5.1.6",
     "@react-navigation/stack": "^5.2.13",
+    "@types/enzyme": "^3.10.5",
+    "@types/enzyme-adapter-react-16": "^1.0.6",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
     "react": "16.11.0",
+    "react-dom": "^16.13.1",
     "react-native": "0.62.2",
     "react-native-datepicker": "^1.7.2",
     "react-native-elements": "^1.2.7",
