--- a/.github/workflows/react-native.yml
+++ b/.github/workflows/react-native.yml
@@ -4,8 +4,15 @@ on: push
 jobs:
   install-and-test:
     runs-on: ubuntu-latest
-    steps: 
+    matrix:
+      os: [ubuntu-latest, macos-latest, windows-latest]
+      node-version: [8.x, 10.x, 12.x]
+      steps: 
       - uses: actions/checkout@v2
+      - name: use node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v1
+        with:
+          node-version: ${{ matrix.node-version }}
       - name: install npm dependencies
         run: |
           yarn install 
