--- a/.github/workflows/react-native.yml
+++ b/.github/workflows/react-native.yml
@@ -3,11 +3,12 @@ on: push
 
 jobs:
   install-and-test:
-    runs-on: ubuntu-latest
-    matrix:
-      os: [ubuntu-latest, macos-latest, windows-latest]
-      node-version: [8.x, 10.x, 12.x]
-      steps: 
+    runs-on: ${{ matrix.os }}
+    strategy: 
+      matrix:
+        os: [ubuntu-latest, macos-latest, windows-latest]
+        node-version: [8.x, 10.x, 12.x]
+    steps: 
       - uses: actions/checkout@v2
       - name: use node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
