--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/enzyme-adapter-react-16": "^1.0.6",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
+    "jest-runner-eslint": "^0.7.7",
     "react": "16.11.0",
     "react-dom": "^16.13.1",
     "react-native": "0.62.2",
