--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/bottom-tabs": "^5.2.8",
-    "@react-navigation/drawer": "^5.6.3",
+    "@react-navigation/material-top-tabs": "^5.1.14",
     "@react-navigation/native": "^5.1.6",
     "@react-navigation/stack": "^5.2.13",
     "@types/enzyme": "^3.10.5",
@@ -29,6 +29,7 @@
     "react-native-reanimated": "^1.8.0",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.7.0",
+    "react-native-tab-view": "^2.14.0",
     "react-native-vector-icons": "^6.6.0"
   },
   "devDependencies": {
